Bug 173545 - Presentation mode doesn't resize when moved from one screen to another
Summary: Presentation mode doesn't resize when moved from one screen to another
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-26 00:24 UTC by D.J. Capelis
Modified: 2008-11-29 18:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description D.J. Capelis 2008-10-26 00:24:40 UTC
Version:            (using KDE 4.1.2)
Compiler:          gcc (GCC) 4.2.4 (Gentoo 4.2.4 p1.0) CFLAGS="-O2 -march=native -pipe -fstack-protector"
OS:                Linux
Installed from:    Gentoo Packages

I work on a dual-screen setup with each screen having a different resolution size.  (Oh the bugs this one has turned up. :-P)

Anyways, since I frequently want to throw windows back and forth between different screens, I have a global shortcut setup to tell kwin to throw the window from one screen to another.  When I use this shortcut and move the presentation window from one screen to the other screen, the window is at the wrong size.  Perhaps this is a kwin bug given the window probably has the maximized setting enabled on it... but I thought I'd file it under okular first.

Steps to reproduce:
1) Have two screens of different resolutions
2) Go to system-settings
3) Keyboard and Mouse
4) Keyboard Shortcuts
5) Set "KDE component" to kwin
6) Set "Window to Next Screen" to a global shortcut of your choice (I use alt-downarrow)
7) Open a file in okular
8) Enable presentation mode
9) Trigger your global shortcut
10) Observe that the window is the wrong size
Comment 1 Pino Toscano 2008-11-29 18:45:27 UTC
SVN commit 890639 by pino:

Resize accordingly when we are resized from "outside" (eg by the WM).

BUG: 173545


 M  +19 -0     presentationwidget.cpp  
 M  +2 -0      presentationwidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=890639