Resize accordingly when we are resized from "outside" (eg by the WM).

BUG: 173545

svn path=/trunk/KDE/kdegraphics/okular/; revision=890639